chirps sorting
